[package]
name = "coffee_snake"
version = "0.1.0"
authors = ["abdel <abdelzighem1@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
coffee = {git = "https://github.com/hecrj/coffee/", features = ["opengl"] }


# gfx (OpenGL)
gfx = { version = "0.18", optional = true }
gfx_core = { version = "0.9", optional = true }
glutin = { version = "0.20", optional = true }
gfx_device_gl = { version = "0.16", optional = true }
gfx_window_glutin = { version = "0.30", optional = true }
gfx_glyph = { version = "0.15", optional = true }
gfx_winit = { package = "winit", version = "0.19", optional = true }

[features]

opengl = ["gfx", "gfx_core", "glutin", "gfx_device_gl", "gfx_window_glutin", "gfx_glyph", "gfx_winit"]
